[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pdf-tools-ai-mcp"
version = "1.0.0"
description = "AI-powered pdf tools ai MCP server for agents. Supports extract text, count pages, get metadata. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0", "PyPDF2>=3.0.0", ]
keywords = ["mcp", "ai", "meok", "pdf", "tools", "mcp/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/pdf-tools-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
pdf_tools_ai_mcp = "server:main"
